// Copyright (c) 2023 - Restate Software, Inc., Restate GmbH
//
// This file is part of the Restate e2e tests,
// which are released under the MIT license.
//
// You can find a copy of the license in file LICENSE in the root
// directory of this repository or package, or at
// https://github.com/restatedev/e2e/blob/main/LICENSE

syntax = "proto3";

option java_package = "dev.restate.e2e.services.externalcall";
option java_outer_classname = "RandomNumberListGeneratorProto";

import "dev/restate/ext.proto";

package rnlg;

service RandomNumberListGenerator {
  option (dev.restate.ext.service_type) = UNKEYED;

  rpc GenerateNumbers (GenerateNumbersRequest) returns (GenerateNumbersResponse);
}

message GenerateNumbersRequest {
  uint32 items_number = 1;
}

message GenerateNumbersResponse {
  repeated int32 numbers = 1;
}